Closed
Bug 1800772
Opened 3 years ago
Closed 3 years ago
Perma toolkit/components/pictureinpicture/tests/browser_durationChange.js | Expected to get the right mouse events. - ["mousedown","mouseup"] deepEqual ["pointerdown","mousedown","pointerup","mouseup"] - JS frame... when Gecko 109 merges to Beta on 2022
Categories
(Toolkit :: Picture-in-Picture, defect)
Tracking
()
VERIFIED
FIXED
109 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox107 | --- | unaffected |
| firefox108 | --- | unaffected |
| firefox109 | + | verified |
People
(Reporter: mlaza, Assigned: saschanaz)
References
Details
Attachments
(1 file, 1 obsolete file)
[task 2022-11-15T13:05:01.404Z] 13:05:01 INFO - TEST-PASS | toolkit/components/pictureinpicture/tests/browser_durationChange.js | Toggle reached target opacity. - true == true -
[task 2022-11-15T13:05:01.405Z] 13:05:01 INFO - Right-clicking on toggle.
[task 2022-11-15T13:05:01.405Z] 13:05:01 INFO - Buffered messages finished
[task 2022-11-15T13:05:01.406Z] 13:05:01 INFO - TEST-UNEXPECTED-FAIL | toolkit/components/pictureinpicture/tests/browser_durationChange.js | Expected to get the right mouse events. - ["mousedown","mouseup"] deepEqual ["pointerdown","mousedown","pointerup","mouseup"] - JS frame :: chrome://mochitests/content/browser/toolkit/components/pictureinpicture/tests/head.js :: assertSawMouseEvents :: line 383
[task 2022-11-15T13:05:01.406Z] 13:05:01 INFO - Stack trace:
[task 2022-11-15T13:05:01.406Z] 13:05:01 INFO - chrome://mochitests/content/browser/toolkit/components/pictureinpicture/tests/head.js:assertSawMouseEvents:383
[task 2022-11-15T13:05:01.407Z] 13:05:01 INFO - TEST-PASS | toolkit/components/pictureinpicture/tests/browser_durationChange.js | No Picture-in-Picture window found. -
Comment 1•3 years ago
|
||
This seems to be related to bug 1799565; I can turn the failures off and on just by flipping the pref that that bug added. Kagami, what's your advice about how to handle this? We don't have any real dependency on the pointer events themselves, we just need to be able to have a consistent set of events that we can expect to get.
Flags: needinfo?(krosylight)
| Assignee | ||
Comment 2•3 years ago
|
||
Ah, it's the logic in bug 1799565, it shouldn't return pref(); or it'll block pointer events unconditionally without the pref. I'll fix it.
Flags: needinfo?(krosylight)
| Assignee | ||
Updated•3 years ago
|
Assignee: nobody → krosylight
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•3 years ago
|
||
Otherwise no form element will get pointer events on beta 😬
Depends on D162105
| Assignee | ||
Comment 4•3 years ago
|
||
Otherwise no form element will get pointer events on beta 😬
Depends on D162105
Updated•3 years ago
|
Attachment #9303619 -
Attachment is obsolete: true
Pushed by krosylight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0f86833852a9
Early return only when the pref is true r=smaug
Comment 6•3 years ago
|
||
Patch is working in today's central as beta simulation
Comment 7•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Updated•3 years ago
|
Updated•3 years ago
|
Status: RESOLVED → VERIFIED
Comment 8•3 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•