Bug 1800772 - Early return only when the pref is true r=smaug

Otherwise no form element will get pointer events on beta 😬

Differential Revision: https://phabricator.services.mozilla.com/D162171